# ersip-sprint

./: .gitignore  Readme.md  main.py  pyproject.toml
sprints/1/: 1 - Component Trees and LiDAR DEMs.ipynb  2 - Load and display LiDAR raster.ipynb  3 - Max-tree and attribute filtering.ipynb  4 - Attribute profiles.ipynb  5 - Pattern Spectra.ipynb
sprints/3/: pattern_spectrum_building_detection.ipynb
src/: attribute_std.py  profile.py
static/: building_prediction_mask.tif
